--- a/MP.html
+++ b/MP.html
@@ -12,7 +12,7 @@
     text-align:center;
     padding:40px;
     ">
-        <img alt="王先生" src=""D:\练习图片\1.jpg"" width="90px" height="90px">    </div>
+        <img alt="王先生" src="./1.jpg" width="90px" height="90px">    </div>
     <div style="
     max-width:760px;
     margin:30px auto;
