--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     padding:15px;
     line-height:1.7;
     ">
-        <p style="text-align: center;font-size: 200%;" >姓名：王先生 本人就职于梵高新材料科技有限公司。现任采购部，职位采购经理。</p>
+        <p style="text-align: center;" ><b>姓名：</b>王先生 </p>
+        <p style="text-align: center;" ><b>职位：</b>采购经理</p>
+        <p style="text-align: center;"><b>电话：</b>13606166666</p>
         <p></p><hr/>
         <p>简单介绍一下本公司：浙江梵高新材料科技有限公司（简称梵高美缝），是一家专注于瓷砖缝隙与厨卫封边系统解决、专注绿色环保以及化学材料研究发展的企业。公司自主研发、现代化生产、销售渠道建设及品牌推广，形成了以创新、品质为核心的技术工程服务团队，为市场服务展示好的产品和工艺创造来增值可持续的企业发展。
         梵高美缝集研发、生产、销售、仓储为一体。以自产自销自推广的模式，经营主要以瓷砖美缝系列为主的家装辅材产品，通过高质量，高品位和高水平的服务让客户轻松享受健康家装。
