--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p style="text-align: center;" ><b>职位：</b>采购经理</p>
         <p style="text-align: center;"><b>电话：</b>13606166666</p>
         <p></p><hr/>
-        <p>简单介绍一下本公司：浙江梵高新材料科技有限公司（简称梵高美缝），是一家专注于瓷砖缝隙与厨卫封边系统解决、专注绿色环保以及化学材料研究发展的企业。公司自主研发、现代化生产、销售渠道建设及品牌推广，形成了以创新、品质为核心的技术工程服务团队，为市场服务展示好的产品和工艺创造来增值可持续的企业发展。
+        <p>公司简介：浙江梵高新材料科技有限公司（简称梵高美缝），是一家专注于瓷砖缝隙与厨卫封边系统解决、专注绿色环保以及化学材料研究发展的企业。公司自主研发、现代化生产、销售渠道建设及品牌推广，形成了以创新、品质为核心的技术工程服务团队，为市场服务展示好的产品和工艺创造来增值可持续的企业发展。
         梵高美缝集研发、生产、销售、仓储为一体。以自产自销自推广的模式，经营主要以瓷砖美缝系列为主的家装辅材产品，通过高质量，高品位和高水平的服务让客户轻松享受健康家装。
         公司成立缝隙美学学院，对缝隙的形态、质感、色彩、光泽等元素通过产品进行设计应用，实现缝隙与瓷砖相互共融的设计理念。让缝隙跟上以素色为美、灰调至上的现代新风尚，让消费者感受美缝色彩的同时感知到缝隙的深浅与冷暖。
         面对未来，梵高公司将不忘“营造健康人居，倡导艺术生活”使命，以“精细制造、互联网+、品牌升级、管理升级”为驱动力，构建“新制造、新研发、新零售”核心竞争力，推动品牌转型升级，努力成为美缝建材行业高质量发展的排头兵。</p>
